--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "bumbummen99/shoppingcart": "^2.9",
         "fideloper/proxy": "^4.0",
+        "kyslik/column-sortable": "^6.3",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0"
     },
